wubi (8.10) UNRELEASED; urgency=low

  * Initial revision
  * Hello world, we have a window showing

 -- Agostino Russo <agostino.russo@gmail.com>  Thu, 07 Aug 2008 07:31:52 +0100